<resources>
    <string name="app_name">ShoppingApp</string>
    <string name="menu">Menu</string>
    <string name="promotion">Promotion</string>
    <string name="sale">Sale</string>
    <string name="trend">Trend</string>
    <string name="best_sales_today">Best Sales ToDay</string>
    <string name="bgimagesshop">bgimagesshop</string>
    <string name="imagebeautyitem1">imagebeautyitem1</string>
    <string name="imageclothingitem1">imageclothingitem1</string>
    <string name="imagelaptopitem1">imagelaptopitem1</string>
    <string name="imagephoneitem1">imagephoneitem1</string>
    <string name="imageapplianceitem1">imageapplianceitem1</string>
    <string name="imagebabyitem1">imagebabyitem1</string>
    <string name="imageaccessoryitem1">imageaccessoryitem1</string>
    <string name="imageshoesitem1">imageshoesitem1</string>
    <string name="imageoutdooritem1">imageoutdooritem1</string>
    <string name="imagewatchitem1">imagewatchitem1</string>
    <string name="imageshoesitem2">imageshoesitem2</string>
    <string name="imageaccessoryitem2">imageaccessoryitem2</string>
    <string name="clothingmenu">Clothing</string>
    <string name="computersmenu">Computers</string>
    <string name="shoesmenu">Shoes</string>
    <string name="phone_accessorymenu">Phone Accessory</string>
    <string name="beauty_hairmenu"><![CDATA[beauty & hair]]></string>
    <string name="appliancesmenu">Appliances</string>
    <string name="clothingitem1description">LEEJOOER 2017 Winter Jacket Coat \nPrice: US $100.80</string>
    <string name="laptopItem1Description">15.6inch Intel Core i7 CPU \nPrice: US $561.75</string>
    <string name="shoesItem1Description">2017 Men brand casual outdoor walking \nPrice: US $32.05</string>
    <string name="beautyItem1Description">Volcanic Soil Facial Mask Acne Remove Blackhead \nPrice: US $4.34</string>
    <string name="phoneaccessoryItem1Description">FLOVEM Magnetic Car Holders  Price: US $3.04</string>
    <string name="applianceItem1Description">PUPPYOO Home Canister Vacuum Cleaner Price: US $118.80</string>
    <string name="clothingitem1">clothingItem1</string>
    <string name="clothingItem1Descripton">LEEJOOER 2017 Winter Jacket Coat Women Fashion High Street Real Fur Vintage Basic Jacket Coat Streetwear Bomber Jacket Women</string>
    <string name="price">Price:</string>
    <string name="pricevalue">US $100.80 / piece</string>
    <string name="color">Color:</string>
    <string name="size">Size:</string>
    <string name="sizevalue">One Size</string>
    <string name="sizenote">Note: Chest width(cm): 140 | Body Lenth(cm): 66</string>
    <string name="shippingcountry">Shipping From:</string>
    <string name="country">China</string>
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="quantityvalue">0</string>
    <string name="plus">+</string>
    <string name="total_payment">Total Payment:</string>
    <string name="totalpaymentvalue">0</string>
    <string name="buy_now">Buy Now</string>
    <string name="imagebeauty1">beauty1</string>
    <string name="beautyItem1Descript">Volcanic Soil Facial Mask Acne Remove Blackhead Mite Propolis Face Care Treatment Repair Whitening Cream Skin Care Moisturizing</string>
    <string name="beautyI1Price">US $4.34</string>
    <string name="beautyShipping">Free Shipping</string>
    <string name="beautyQuantityValue">0</string>
    <string name="beautyTotalValue">0</string>
    <string name="laptopItem1Descript">15.6inch Intel Core i7 CPU 8GB RAM+240GB SSD+750GB HDD Built-in WIFI Bluetooth DVD-ROM Windows 7/10 Laptop Notebook Computer</string>
    <string name="laptop1Price">US $561.75 / Piece</string>
    <string name="imagelaptop1">imageLaptop1</string>
    <string name="shoes1desciption">2017\tMen brand casual outdoor walking shoes male size 39-46 unisex hunarache breathable black casual Men\'s comfortable shoes</string>
    <string name="shoes1pricevalue">US $32.05 / Pair</string>
    <string name="shoes1sizevalue">9</string>
    <string name="shipping">Shipping:</string>
    <string name="shoes1shipping">Free Shipping to Vietnam</string>
    <string name="shoes1quantity">0</string>
    <string name="shoes1totalpay">0</string>
    <string name="appliance1iimage">appliance1iImage</string>
    <string name="appliance1Description">PUPPYOO Home Canister Vacuum Cleaner Large Suction Capacity Powerful Aspirator Multifunctional Cleaning Appliances WP9005B</string>
    <string name="appliance1PriceValue">US $118.80 / Piece</string>
    <string name="appliance1Shipping">Free Shipping</string>
    <string name="appliance1Quantity">0</string>
    <string name="appliance1TotalPay">0</string>
    <string name="leejooer_2017_price_us_100_80_piece">LEEJOOER 2017 Price: US $100.80/ Piece</string>
    <string name="_2017_men_brand_casual_price_us_32_05_pair">2017 Men brand casual Price: US $32.05 / Pair</string>
    <string name="feedbacks">FeedBacks:</string>
    <string name="send">Send</string>
    <string name="feedback">feedback</string>
    <string name="wellcome">wellcome</string>
    <string name="phoneItem1Description">FLOVEM Magnetic Car Holders For iPhone 7 6 Plus 5s Air Vent Mount Phone Stand Holder For Samsung S7 S8 S6 Edge Phone Accessories</string>
    <string name="phone1Shipping">Free Shipping</string>
    <string name="phone1Quantity">0</string>
    <string name="phone1TotalPay">0</string>
    <string name="phone1Price">US $3.04 / Piece</string>
</resources>
