<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.example.luviasnguyen.shoppingapp.Clothing1DetailsActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/clothingitem1"
            android:scaleType="centerCrop"
            android:src="@drawable/clothing1_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/clothingItem1Descripton"
            android:textColor="#000000" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/price"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pricevalue"
                android:textColor="#FF5722"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/color"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_Blue_Checkbox"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/checkbox_blue_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp" />

            <TextView
                android:id="@+id/textView_Black_Checkbox"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="#000000" />

            <CheckBox
                android:id="@+id/checkbox_black_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp" />

            <TextView
                android:id="@+id/textView_Yellow_Checkbox"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="#FFEB3B" />

            <CheckBox
                android:id="@+id/checkbox_Yellow_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/size"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sizevalue"
                android:textColor="#F57F17"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkBox_item_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/sizenote"
            android:textColor="#FF5722" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/shippingcountry"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textColor="#FF5722" />

            <CheckBox
                android:id="@+id/checkBox_item_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/quantity"
                android:textColor="#000000"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_minus_quantity"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:onClick="onClickMinusQuantity"
                android:text="@string/minus"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_show_quanity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/quantityvalue"
                android:textStyle="bold" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="onClickAddQuantity"
                android:text="@string/plus"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimaryDark"></View>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/total_payment"
                android:textAllCaps="true"
                android:textColor="#3F51B5"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_total_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalpaymentvalue"
                android:textColor="#FF5722"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/button_BuyNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:background="#FF5722"
            android:onClick="onClickBuyNow"
            android:text="@string/buy_now"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_Display_SummaryPayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:background="#009688"
            android:textColor="#ffffff"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/feedbacks"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="#E65100"/>

        <EditText
            android:id="@+id/editText_Feedbacks"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#84FFFF"
            android:hint="@string/feedback"
            android:inputType="" />

        <Button
            android:id="@+id/btn_feedbacks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/send"
            android:onClick="onClickFeedBacks"/>
    </LinearLayout>


</ScrollView>